# iconex

./: .gitignore
ROMs/Lexicon 480L/: 480L_DIAG_27256  480L_ROM1  480L_ROM2  480L_ROM3  480L_ROM4  Note.txt
ROMs/Lexicon M300/: Note.txt
ROMs/Lexicon PCM60/: lexicon_pcm60.txt  lexicon_pcm60_v1_1.hex  lexicon_pcm60_v1_2.hex  lexicon_pcm60_v1_3.hex  lexicon_pcm60_v1_4.hex
ROMs/Lexicon PCM81/: lexicon_pcm81.txt
docs/plans/: 003 - 224XL-concert-decay-continuation.md  005 - 224XL-concert-decay-investigation.md  006 - 224XL-overunity-frontier.md  007 - 224XL-faithful-reconstruction-plan.md  009 - 224XL-validation-plan.md  010 - 224XL-bottom-up-continuation.md  011 - 224XL-L4-L5-L6-decomposition.md  012 - 224XL-interp-stack.md  013 - 224XL-holistic-model-plan.md  014 - 224XL-M0b-netlist-prompt.md  015 - 224XL-phase1-aru-from-netlist.md  016 - 224XL-cmag63-cycle-accurate-cosim.md  017 - 224XL-M3-free-run-reverb.md  018 - 224XL-M4-recirculation-decay.md  019 - 224XL-WCS-microword-verification.md  020 - 224XL-complete-whole-machine-emulation.md  021 - 224XL-RTL-arbiter-and-first-tail.md  022 - 224XL-known-answer-oracles-and-parameter-state.md  023 - 224XL-ARU-signature-lock-live-cosim-and-calibrated-ranges.md  024 - 224XL-complement-domain-engine-resync.md  025 - 224XL-FPC-pin-lock-dynamics-quantified-and-render-fidelity.md  224XL-L4-L5-L6-decomposition.md  224XL-authoring-progress.md  224XL-bottom-up-continuation.md  224XL-concert-decay-continuation.md  224XL-concert-decay-investigation.md  224XL-faithful-reconstruction-plan.md  224XL-overunity-frontier.md  224XL-signature-analysis-plan.md  224XL-validation-plan.md  480L_reversing_roadmap.md  (+2 more)
renders/: 20260629_154112_CONCERT_burst20_5s.wav.gpk  20260629_154112_CONCERT_burst20_5s.wav.vs  20260629_170054_snare_thru_CONCERT_memwlive.wav.gpk  20260629_170054_snare_thru_CONCERT_memwlive.wav.vs  20260629_215500_snare_thru_CONCERT_rdrreg.wav.gpk  20260629_215500_snare_thru_CONCERT_rdrreg.wav.vs  20260630_offsetfix_snare_thru_CONCERT_rdrreg.wav.gpk  snare34130.wav.vs
tools/: _aru_test_copy.py  _concert_decode.csv  _dis_SBC1.txt  _dis_SBC2.txt  _dis_SBC3.txt  _hunt_arbiter.py  _hunt_assumptions.py  _hunt_coeffscale.py  _hunt_coeffscale2.py  _hunt_coeffscale3.py  _hunt_coeffscale4.py  _hunt_coeffscale5.py  _hunt_coupling.py  _hunt_ctldecode.py  _hunt_cyclefaithful.py  _hunt_decodefix.py  _hunt_diagdump.py  _hunt_diagpin.py  _hunt_diagpin2.py  _hunt_diagtiming.py  _hunt_diagunity.py  _hunt_diagunity2.py  _hunt_diagunity3.py  _hunt_diagunity4.py  _hunt_diagunity5.py  _hunt_diagunity6.py  _hunt_fpcout.py  _hunt_fpcout2.py  _hunt_fpcout3.py  _hunt_fpcout4.py  _hunt_fpcout5.py  _hunt_fpcselect.py  _hunt_fpcselect2.py  _hunt_fpcselect3.py  _hunt_fpcselect4.py  _hunt_fpcselect5.py  _hunt_fpcselect6.py  _hunt_gate3seed.py  _hunt_intconfirm.py  _hunt_inv3decay.py  (+175 more)
tools/harness/224xl/: CMakeLists.txt  README.md  booth_vectors_test.cpp  diff_harness.cpp  golden_io.hpp  mult_vectors_test.cpp  wav_ir_tool.cpp
tools/harness/224xl/golden/: .gitignore
tools/harness/224xl/golden_rtl/: concert_meta.json  d1max_meta.json  d1zero_meta.json  sig6_meta.json
(+227 files in other folders)
